# WMIC

./: .clang-format  .gitignore  .qmake.stash  CMakeLists.txt  LICENSE  ReadMe.md  WMI.pro  WMI.sln  WMI.vcxproj  WMI.vcxproj.filters  WMIC.sln  WMIC.vcxproj  WMIC.vcxproj.filters  main.cpp  wmic.cpp  wmic.h
src/: CMakeLists.txt  config.cmake.in  main.cpp  wmic.cpp  wmic.h
